@@ -29,8 +29,8 @@ import org.jetbrains.annotations.Nullable;
 import page.nafuchoco.soloservercore.SoloServerApi;
 import page.nafuchoco.soloservercore.data.PlayersTeam;
 import page.nafuchoco.soloservercore.database.PluginSettingsManager;
-import page.nafuchoco.soloservercore.event.PlayersTeamCreateEvent;
-import page.nafuchoco.soloservercore.event.PlayersTeamStatusUpdateEvent;
+import page.nafuchoco.soloservercore.event.team.PlayersTeamCreateEvent;
+import page.nafuchoco.soloservercore.event.team.PlayersTeamStatusUpdateEvent;
 
 import java.text.SimpleDateFormat;
 import java.util.*;
@@ -49,8 +49,7 @@ public class TeamCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        if (sender instanceof Player) {
-            val player = (Player) sender;
+        if (sender instanceof Player player) {
             val soloServerApi = SoloServerApi.getInstance();
             if (args.length == 0) {
                 // Show Team Status
@@ -92,7 +91,7 @@ public class TeamCommand implements CommandExecutor, TabCompleter {
                     }
 
                     val id = UUID.randomUUID();
-                    val createEvent = new PlayersTeamCreateEvent(new PlayersTeam(id, (player).getUniqueId()), player);
+                    val createEvent = new PlayersTeamCreateEvent(new PlayersTeam(id, (player).getUniqueId()), sscPlayer);
                     Bukkit.getServer().getPluginManager().callEvent(createEvent);
                     if (!createEvent.isCancelled())
                         sender.sendMessage(ChatColor.GREEN + "[Teams] あなたのチームが作成されました！\n" +
@@ -190,7 +189,7 @@ public class TeamCommand implements CommandExecutor, TabCompleter {
                                     transferredTeam.setMembers(originalTeam.getMembers());
                                     val updateEvent = new PlayersTeamStatusUpdateEvent(
                                             originalTeam,
-                                            player,
+                                            sscPlayer,
                                             PlayersTeamStatusUpdateEvent.UpdatedState.OWNER,
                                             originalTeam,
                                             transferredTeam);
@@ -219,6 +218,9 @@ public class TeamCommand implements CommandExecutor, TabCompleter {
                         sender.sendMessage(ChatColor.YELLOW + "[Teams] チーム名を変更するには自分がオーナーのチームに所属している必要があります。");
                     }
                     break;
+
+                default:
+                    break;
             }
         } else {
             sender.sendMessage("[Teams] This command must be executed in-game.");
@@ -231,7 +233,7 @@ public class TeamCommand implements CommandExecutor, TabCompleter {
         if (args.length <= 1)
             return Arrays.asList("create", "invite", "accept", "leave", "confirm", "transfer", "name");
         else if (args[0].equals("invite"))
-            return Bukkit.getServer().getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList());
+            return Bukkit.getServer().getOnlinePlayers().stream().map(Player::getName).toList();
         else
             return null;
     }
